--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -8,10 +8,13 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  appwrite: ^13.0.0
   dartz: ^0.10.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
   get_it: ^8.0.2
   google_fonts: 6.1.0
 
@@ -19,6 +22,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
