--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,13 @@ dependencies:
   sidebarx: ^0.17.1
   go_router: ^14.2.3
   data_table_2: ^2.5.15
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  meta: ^1.15.0
+  bloc: ^8.1.4
+  lottie: ^3.1.3
+  appwrite: ^13.0.0
+  get_it: ^8.0.2
   
 
 dev_dependencies:
@@ -29,3 +36,4 @@ flutter:
     - assets/
     - assets/icons/
     - assets/images/
+    - assets/lotties/
